# ml

./: .gitignore  pyproject.toml  requirements.txt
CNN/: cnn.ipynb  convolution_pooling.ipynb  creating_module.ipynb  hw.ipynb
game_of_thrones/: main.ipynb
game_of_thrones/dataset/: new_submission.csv
linear_models/: linear_models.ipynb  linear_regression.ipynb  logistic_regression.ipynb  regularization.ipynb
possum/: main.ipynb
pytorch_intro/: Torch-autograd.ipynb  main.ipynb
sem2/: main.ipynb
sem3/: main.ipynb
sem_Model_Selection/: hw.ipynb  main.ipynb
sem_Model_Selection/data/: my_submission.csv
titanic/: main.ipynb
